--- a/app.json
+++ b/app.json
@@ -1,13 +1,9 @@
 {
-  "name": "سورس كرستين",
-  "description": "اللهم صلِ على محمد وآل محمد",
-  "logo": "https://telegra.ph/file/54699e9f531dfac087926.jpg",
-  "keywords": [
-    "plugin",
-    "modular",
-    "productivity"
-  ],
-  "repository": "https://github.com/xlucifer711/swad/",
+  "name": "IQTHON TELETHON ARAB",
+  "description": "اهلا بك في تليثون العرب الأصلي { @iqthon }",
+  "logo": "https://telegra.ph/file/aa0ee1b06ddcdcb40189a.jpg",
+  "keywords": ["plugin","modular","productivity"],
+  "repository": "https://github.com/help-iq2/telethon",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
@@ -16,51 +12,37 @@
       "value": ""
     },
     "APP_ID": {
-      "description": "هنا ضع الاب ايدي الخاص بك يتكون من 8 ارقام", 
+      "description": "هنا ضع الايبي ايدي الخاص بك يتكون من ارقام", 
       "value": ""
     },
     "API_HASH": {
-      "description": "هنا ضع الايبي هاش الخاص بك",
+      "description": "هنا ضع الايبي هاش الخاص بك يتكون من احرف و ارقام",
       "value": ""
     },
-    "ENV": {
-      "description": "لا تغير هذه القيمه",
-      "value": "ANYTHING"
-    },
-    "COMMAND_HAND_LER": {
-      "description": "لا تغير هذه القيمه",
-      "value": "."
-    },
     "STRING_SESSION": {
-      "description": "هنا ضع كود سيشن تيليثون كود تيرمكس الخاص بك",
+      "description": " ضع كود تيرمكس",
       "value": ""
     },
     "TG_BOT_USERNAME": {
-      "description": "هنا ضع معرف بوتك بدون @",
+      "description": " ضع معرف بوتك بدون @",
       "value": ""
     },
     "TG_BOT_TOKEN": {
-      "description": "هنا ضع توكن بوتك الذي صنعته",
+      "description": "ضع توكن بوتك",
       "value": ""
     },
-    "HEROKU_API_KEY": {
-      "description": "هنا ضع الايبي كي الخاص بحساب هيروكو من هذا الرابط https://dashboard.heroku.com/account",
-      "value": "",
-      "required": false
-    },
-    "HEROKU_APP_NAME": {
-      "description": "اسم التطبيق اول مربع كتبته خلي هنا نفسه وحروف صغيره",
-      "value": "",
-      "required": false
+    "COMMAND_HAND_LER": {
+      "description": "اتركة كما هوة او ضع الأمر الذي تريده بدلا من النقطة",
+      "value": "."
     },
     "TZ": {
-      "description": "المنطقه الزمنيه من القارة الخاصه بك وعاصمه بلدك يجب ان يكون اول حرف كبير",
-      "value": "Africa/Cairo",
+      "description": "ضع القاره / عاصمة بلدك ( اذا كنت لاتعرفه اتركة كما هوة )",
+      "value": "Asia/Baghdad",
       "required": false
     },
     "UPSTREAM_REPO": {
-      "description": "رمز السورس لا تغيره ابدا",
-      "value": "jepthoniq",
+      "description": "لاتغيرة",
+      "value": "TelethonAr",
       "required": false
     }
   },
@@ -78,8 +60,6 @@
     "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
   },{
     "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
-  },{
-    "url": "https://github.com/rahulps1000/heroku-buildpack-nodejs"
   },{
     "url": "https://github.com/heroku/heroku-buildpack-apt.git"
   },{
