--- a/app.json
+++ b/app.json
@@ -1,9 +1,13 @@
 {
-  "name": "IQTHON TELETHON ARAB",
-  "description": "اهلا بك في تليثون العرب الأصلي { @iqthon }",
-  "logo": "https://telegra.ph/file/aa0ee1b06ddcdcb40189a.jpg",
-  "keywords": ["plugin","modular","productivity"],
-  "repository": "https://github.com/help-iq2/telethon",
+  "name": "سورس كرستين",
+  "description": "اللهم صلِ على محمد وآل محمد",
+  "logo": "https://telegra.ph/file/83ee584aef1c4db1d9597.jpg",
+  "keywords": [
+    "plugin",
+    "modular",
+    "productivity"
+  ],
+  "repository": "https://github.com/xlucifer711/sbb_b/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
@@ -12,37 +16,51 @@
       "value": ""
     },
     "APP_ID": {
-      "description": "هنا ضع الايبي ايدي الخاص بك يتكون من ارقام", 
+      "description": "هنا ضع الاب ايدي الخاص بك يتكون من 8 ارقام", 
       "value": ""
     },
     "API_HASH": {
-      "description": "هنا ضع الايبي هاش الخاص بك يتكون من احرف و ارقام",
+      "description": "هنا ضع الايبي هاش الخاص بك",
       "value": ""
     },
+    "ENV": {
+      "description": "لا تغير هذه القيمه",
+      "value": "ANYTHING"
+    },
+    "COMMAND_HAND_LER": {
+      "description": "لا تغير هذه القيمه",
+      "value": "."
+    },
     "STRING_SESSION": {
-      "description": " ضع كود تيرمكس",
+      "description": "هنا ضع كود سيشن تيليثون كود تيرمكس الخاص بك",
       "value": ""
     },
     "TG_BOT_USERNAME": {
-      "description": " ضع معرف بوتك بدون @",
+      "description": "هنا ضع معرف بوتك بدون @",
       "value": ""
     },
     "TG_BOT_TOKEN": {
-      "description": "ضع توكن بوتك",
+      "description": "هنا ضع توكن بوتك الذي صنعته",
       "value": ""
     },
-    "COMMAND_HAND_LER": {
-      "description": "اتركة كما هوة او ضع الأمر الذي تريده بدلا من النقطة",
-      "value": "."
+    "HEROKU_API_KEY": {
+      "description": "هنا ضع الايبي كي الخاص بحساب هيروكو من هذا الرابط https://dashboard.heroku.com/account",
+      "value": "",
+      "required": false
+    },
+    "HEROKU_APP_NAME": {
+      "description": "اسم التطبيق اول مربع كتبته خلي هنا نفسه وحروف صغيره",
+      "value": "",
+      "required": false
     },
     "TZ": {
-      "description": "ضع القاره / عاصمة بلدك ( اذا كنت لاتعرفه اتركة كما هوة )",
-      "value": "Asia/Baghdad",
+      "description": "المنطقه الزمنيه من القارة الخاصه بك وعاصمه بلدك يجب ان يكون اول حرف كبير",
+      "value": "Africa/Cairo",
       "required": false
     },
     "UPSTREAM_REPO": {
-      "description": "لاتغيرة",
-      "value": "TelethonAr",
+      "description": "رمز السورس لا تغيره ابدا",
+      "value": "jepthoniq",
       "required": false
     }
   },
@@ -59,7 +77,9 @@
   },{
     "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
   },{
-    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+    "url": "https://github.com/riganf/heroku-buildpack-p7zip"
+  },{
+    "url": "https://github.com/rahulps1000/heroku-buildpack-nodejs"
   },{
     "url": "https://github.com/heroku/heroku-buildpack-apt.git"
   },{
@@ -68,3 +88,4 @@
     "url": "heroku/python"
   }]
 }
+  
